--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -3,7 +3,7 @@
 html, body {
   margin: 0;
   padding: 0;
-  background: #282829;
+  background: #2f2f2f;
   color: white;
   font-family: "Noto Sans", sans-serif;
 }
